--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>github test</title>
 </head>
 <body>
+    <div align="center">
     <h1 style="text-align: center;">For Github</h1>
+    <hr>
+    <P><a href="page02.html">API是什麼？認識 Web API、HTTP 和 JSON 資料交換格式</a></P>
+    <P><a href="page02.html">API是什麼？認識 Web API、HTTP 和 JSON 資料交換格式</a></P>
+    </div>
 </body>
 </html>
