added page03 link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 style="text-align: center;">For Github</h1>
     <hr>
     <P><a href="page02.html">API是什麼？認識 Web API、HTTP 和 JSON 資料交換格式</a></P>
-    <P><a href="page02.html">API是什麼？認識 Web API、HTTP 和 JSON 資料交換格式</a></P>
+    <P><a href="page03.html">new04</a></P>
     </div>
 </body>
 </html>
